Update git config

--- a/apps/basic/git/config/config
+++ b/apps/basic/git/config/config
@@ -1,6 +1,6 @@
 [user]
     name = "Ryan WSY"
-    email = "git@ryanwsy.simplelogin.com"
+    email = "ryan08100715@gmail.com"
 [init]
 	defaultBranch = main
 [core]
